# agrirouter-sdk-python

./: .gitignore  LICENSE  README.adoc  README.md  build_and_distribute.sh  conftest.py  example_script.py  examples.txt  my_test.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
.github/workflows/: continuous-integration.yml  continuous_integration.yml  linting-for-all-versions.yml  python-package.yml  release.yml
agrirouter/: __init__.py
agrirouter/api/: enums.py  environments.py  exceptions.py
agrirouter/auth/: auth.py  dto.py  enums.py  exceptions.py  parameters.py  response.py
agrirouter/clients/: clients.py
agrirouter/constants/: media_types.py
agrirouter/environments/: environmental_services.py  environments.py  exceptions.py  keys.py
agrirouter/messaging/: builders.py  certification.py  decode.py  encode.py  enums.py  exceptions.py  messages.py  request.py  result.py
agrirouter/messaging/clients/: http.py  mqtt.py
agrirouter/messaging/parameters/: dto.py  service.py
agrirouter/messaging/services/: cloud.py  commons.py  messaging.py  sequence_number_service.py
agrirouter/onboarding/: dto.py  enums.py  exceptions.py  headers.py  onboarding.py  parameters.py  request.py  request_body.py  response.py  signature.py
agrirouter/revoking/: headers.py  parameters.py  request.py  request_body.py  revoking.py
agrirouter/utils/: raw_message_content_length_for_chunking.py  type_url.py  utc_time_util.py
auth/: auth.py  enums.py  exceptions.py  parameters.py  response.py
clients/: clients.py
constants/: media_types.py
environments/: environmental_services.py  environments.py
logging/: logging.py
messaging/: certification.py  clients.py  decode.py  encode.py  enums.py  exceptions.py  messages.py  request.py  result.py  services.py
messaging/parameters/: dto.py  service.py
messaging/services/: cloud.py  commons.py  messaging.py
messaging/services/http/: outbox.py
onboarding/: enums.py  exceptions.py  headers.py  onboarding.py  parameters.py  request.py  request_body.py  response.py  signature.py
revoking/: headers.py  parameters.py  request.py  request_body.py  response.py  revoking.py
src/: __init__.py
src/agrirouter/api/: constants.py  enums.py  env.py  environments.py  exceptions.py  messages.py  messaging_builders.py
src/api/: enums.py  environments.py  exceptions.py
src/auth/: auth.py  dto.py  parameters.py  response.py
src/environments/: environmental_services.py
src/messaging/: builders.py  certification.py  decode.py  encode.py  enums.py  messages.py  result.py
src/onboarding/: dto.py  enums.py  headers.py  onboarding.py  parameters.py  request.py  request_body.py  response.py
src/revoking/: headers.py  parameters.py  request.py  revoking.py
src/utils/: type_url.py  utc_time_util.py  uuid_util.py
tests/: constants.py  data_provider.py  sleeper.py
tests/auth_test/: test_auth.py  test_dto.py  test_response.py
tests/common/: constants.py  data_provider.py  onboarding.py  sleeper.py
tests/data/: applications.py  identifier.py  onboard_response_integration_service.py  onboard_response_update.py
tests/enviroments_test/: test_environmental_services.py  test_environments.py
tests/fixtures/: create_message_sender_and_recipient.py  update_http_onboard_responses.py  update_mqtt_onboard_responses.py  update_onboarding_responses_for_mqtt_endpoints.py
tests/internal/: test_validate_toml.py
tests/messaging_test/: test_decode.py  test_encode.py  test_messaging_services.py  test_request.py
tests/onboarding_test/: test_dto.py  test_headers.py  test_onboarding.py  test_onboarding_process_mqtt.py  test_request_onboarding.py  test_signature.py
tests/test_revoking/: test_parameters.py
utils/: type_url.py
(+151 files in other folders)
